# dasf-core

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test_pipeline.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  commit-check.yaml  docker.yaml  docker.yml  lint.yaml  pypi.yaml
dasf/: __init__.py
dasf/datasets/: __init__.py  base.py  blobs.py  datasets.py  download.py
dasf/debug/: __init__.py  debug.py
dasf/feature_extraction/: __init__.py  histogram.py  transform.py  transforms.py
dasf/ml/: __init__.py  core.py
dasf/ml/cluster/: __init__.py  agglomerative.py  classifier.py  dbscan.py  hdbscan.py  kmeans.py  som.py  spectral.py
dasf/ml/decomposition/: __init__.py  pca.py
dasf/ml/dl/: __init__.py  lightning_fit.py  pytorch_lightning.py
dasf/ml/dl/classifier/: pytorch_lightning.py
dasf/ml/dl/clusters/: __init__.py  dask.py
dasf/ml/dl/models/: __init__.py  devconvnet.py
dasf/ml/inference/loader/: base.py  torch.py
dasf/ml/mixture/: classifier.py  gmm.py
dasf/ml/model_selection/: __init__.py  split.py
dasf/ml/neighbors/: __init__.py  neighbors.py
dasf/ml/preprocessing/: __init__.py  standardscaler.py
dasf/ml/svm/: __init__.py  svm.py
dasf/ml/xgboost/: __init__.py  xgboost.py
dasf/pipeline/: __init__.py  pipeline.py  types.py
dasf/pipeline/executors/: __init__.py  base.py  dask.py  ray.py  wrapper.py
dasf/preprocessing/: __init__.py
dasf/profile/: __init__.py  analysis.py  database.py  event.py  plugins.py  profiler.py  utils.py
dasf/profile/plugins/: dasf.py  dask.py  resource_monitor.py
dasf/transforms/: __init__.py  base.py  memory.py  operations.py  transforms.py
dasf/utils/: __init__.py  benchmark.py  decorators.py  funcs.py  generators.py  labels.py  logging.py  types.py  utils.py
doc/: requirements.txt
docs/: .buildinfo  Makefile  api.html  build_doc.sh  genindex.html  index.html  installation.html  objects.inv  overview.html  principles.html  py-modindex.html  search.html  searchindex.js  tutorials.html
docs/.doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree  overview.doctree  principles.doctree  tutorials.doctree
docs/.doctrees/autoapi/dasf/: index.doctree
docs/.doctrees/autoapi/dasf/datasets/: index.doctree
docs/.doctrees/autoapi/dasf/debug/: index.doctree
docs/.doctrees/autoapi/dasf/feature_extraction/: index.doctree
docs/.doctrees/autoapi/dasf/ml/: index.doctree
docs/.doctrees/autoapi/dasf/pipeline/: index.doctree
docs/.doctrees/autoapi/dasf/profile/: index.doctree
docs/.doctrees/autoapi/dasf/transforms/: index.doctree
docs/.doctrees/autoapi/dasf/utils/: index.doctree
docs/.doctrees/nbsphinx/tutorials/: Tutorial_2.ipynb  Tutorial_5.ipynb  Tutorial_7.ipynb
docs/.doctrees/tutorials/: Tutorial_1.doctree  Tutorial_2.doctree  Tutorial_3.doctree  Tutorial_4.doctree  Tutorial_5.doctree  Tutorial_6.doctree  Tutorial_7.doctree  Tutorial_8.doctree
docs/_modules/: index.html
docs/_modules/dasf/datasets/: base.html  datasets.html  download.html
docs/_modules/dasf/debug/: debug.html
docs/_modules/dasf/feature_extraction/: histogram.html  transform.html
docs/_modules/dasf/ml/: core.html
docs/_modules/dasf/pipeline/: pipeline.html  types.html
docs/_modules/dasf/profile/: analysis.html  database.html  event.html  plugins.html  profiler.html  utils.html
docs/_modules/dasf/transforms/: base.html  memory.html  operations.html  transforms.html
docs/_modules/dasf/utils/: benchmark.html  decorators.html  funcs.html  labels.html  logging.html  types.html
docs/_sources/: api.rst.txt  index.rst.txt  installation.rst.txt
docs/_sources/autoapi/dasf/: index.rst.txt
docs/_sources/tutorials/: Tutorial_2.ipynb.txt
docs/_static/: documentation_options.js
docs/autoapi/dasf/: index.html
docs/autoapi/dasf/datasets/: index.html
docs/autoapi/dasf/debug/: index.html
docs/autoapi/dasf/feature_extraction/: index.html
docs/autoapi/dasf/ml/: index.html
docs/autoapi/dasf/pipeline/: index.html
docs/autoapi/dasf/profile/: index.html
docs/autoapi/dasf/transforms/: index.html
docs/autoapi/dasf/utils/: index.html
docs/source/: conf.py  overview.rst  principles.rst  tutorials  tutorials.rst
docs/tutorials/: Tutorial_1.html  Tutorial_1.ipynb  Tutorial_2.html  Tutorial_2.ipynb  Tutorial_3.html  Tutorial_3.ipynb  Tutorial_4.html  Tutorial_4.ipynb  Tutorial_5.html  Tutorial_5.ipynb  Tutorial_6.html  Tutorial_7.html  Tutorial_8.html
docs_source/: build_doc.sh
docs_source/source/: conf.py  tutorials
examples/tutorials/: Tutorial1_simple_ml.ipynb  Tutorial2_datasets.ipynb  Tutorial_1.ipynb  Tutorial_2.ipynb  Tutorial_3.ipynb  Tutorial_4.ipynb  Tutorial_5.ipynb  Tutorial_5_profiling.ipynb  Tutorial_6-patches.ipynb  Tutorial_6.ipynb  Tutorial_7.ipynb  Tutorial_8.ipynb
tests/datasets/: test_datasets.py  test_download.py  test_generic.py
tests/datasets/test_datasets/simple/: HDF5.h5  Xarray.nc
tests/datasets/test_generic/simple/: Array.npy  DataFrame.csv  Parquet.parquet
tests/debug/: test_debug.py
tests/feature_extraction/: test_feature_extraction_transforms.py  test_histogram.py
tests/ipynb/: test_notebooks.py
tests/ml/cluster/: test_agglomerative.py  test_dbscan.py  test_hdbscan.py  test_kmeans.py  test_som.py  test_spectral.py
tests/ml/decomposition/: test_pca.py
tests/ml/dl/clusters/: test_dask_env.py
tests/ml/neighbors/: test_neighbors.py
tests/ml/preprocessing/: test_standardscaler.py
tests/ml/svm/: test_svm.py
tests/ml/xgboost/: test_xgboost.py
tests/pipeline/: test_pipeline.py
tests/pipeline/executors/: test_base_executor.py  test_dask.py  test_ray.py  test_wrapper.py
tests/preprocessing/: test_standardscaler.py
tests/profile/: test_analysis.py  test_plugins.py  test_profile_utils.py  test_profiler.py
tests/transforms/: test_base.py  test_base_transforms.py  test_memory.py  test_operations.py  test_transforms.py
tests/utils/: test_benchmark.py  test_decorators.py  test_funcs.py  test_logging.py  test_types.py  test_utils.py
(+245 files in other folders)
