[tool.poetry]
name = "dasf"
version = "1.0.beta.6"
description = "DASF is an Accelerated Framework for Machine Learning"
authors = ["Julio Faracco <jcfaracco@gmail.com>"]
maintainers = ["Julio Faracco <jcfaracco@gmail.com>"]
license = "MIT"
homepage = "https://github.com/lmcad-unicamp/dasf-core"
repository = "https://github.com/lmcad-unicamp/dasf-core"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Development Status :: 1 - Planning",
    "Environment :: GPU :: NVIDIA CUDA",
]
readme="README.md"
exclude = ["tests/*", "docs/*"]

[tool.poetry.dependencies]
bokeh = "2.4.3"
charset-normalizer = "<3.0"
dask = "2023.3.2"
dask_cuda = "23.4.0"
dask_jobqueue = "0.8.2"
dask_memusage = "^1.1"
dask_ml = "2023.3.24"
GPUtil = "1.4.0"
gdown = "^4.6"
graphviz = "0.20.1"
h5py = "3.10.0"
hdbscan = "0.8.33"
ipympl = "0.9.3"
joblib = "1.2.0"
#lightning = "^2.3.1"
matplotlib = "3.7.1"
memray = "1.10.0"
networkx = "3.2.1"
numpy = "1.23.5"
ormsgpack = "1.4.1"
packaging = "23.1"
pandas = "1.5.2"
portalocker = "2.8.2"
protobuf = "<=3.20.1"
psutil = "5.9.4"
pyarrow = "^14.0.1"
python = "^3.8"
scikit-learn = "1.5.1"
tornado = "^6.3"
xarray = "2023.11.0"
xgboost = "1.7.5"
xpysom-dask = { git = "https://github.com/jcfaracco/xpysom-dask#egg=master" }
zarr = "2.16.1"


[tool.poetry.group.dev.dependencies]
black = "*"
coverage = "*"
flake8 = "*"
hpccm = "*"
interrogate = "*"
isort = "*"
mock = "*"
parameterized = "*"
pytest = "*"
pytest-cov = "*"
wheel = "*"

[tool.poetry.group.docs.dependencies]
sphinx = "*"
sphinx-autoapi = "*"
sphinx_rtd_theme = "*"
nbsphinx = "*"
pandoc = "*"

[tool.isort]
profile = "black"

[tool.coverage.paths]
source = ["dasf", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["dasf"]

[tool.coverage.report]
exclude_also = [
    "except ImportError",
    ".*NV_COMP.*",
    ".*kvikio.*",
    ".*KVIKIO.*",
    ".*jax.*",
    ".*JAX.*",
    ]

[build-system]
requires = ["poetry-core>=1.1.10"]
build-backend = "poetry.core.masonry.api"
