[tool.poetry]
name = "dasf"
version = "1.0.beta.6"
description = "DASF is an Accelerated Framework for Machine Learning"
authors = ["Julio Faracco <jcfaracco@gmail.com>"]
maintainers = ["Julio Faracco <jcfaracco@gmail.com>"]
license = "MIT"
homepage = "https://github.com/lmcad-unicamp/dasf-core"
repository = "https://github.com/lmcad-unicamp/dasf-core"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA",
]
readme="README.md"
exclude = ["tests/*", "docs/*"]

[tool.poetry.dependencies]
bokeh = "^3.0.0"
charset-normalizer = "3.4.2"
dask = "<=2025.7.0"
dask_cuda = "*"
dask_jobqueue = "^0.8.2"
dask_memusage = "^1.1"
dask_ml = ">=2025.1.0"
dask-pytorch-ddp = "^0.2.0"
GPUtil = "^1.4.0"
gdown = "^4.6"
graphviz = "^0.20.1"
h5py = "^3.10.0"
hdbscan = "^0.8.33"
ipympl = "^0.9.3"
ipywidgets = "^8.0.0"
joblib = "1.5.1"
jupyterlab = "^4.0.0"
lightning = "^2.4.0"
matplotlib = "3.10.3"
memray = "1.10.0"
networkx = "^3.2.1"
numpy = "1.26.4"
ormsgpack = "^1.4.1"
packaging = "^23.1"
pandas = "2.2.3"
portalocker = "^2.8.2"
protobuf = ">=4.25.8"
psutil = "^6.0.0"
pyarrow = "^19.0.0"
python = "^3.10"
scikit-learn = "^1.5.1"
tornado = "^6.3"
xarray = "^2025.0.0"
xgboost = "^2.0.0"
zarr = ">=2.0.0"


[tool.poetry.group.dev.dependencies]
black = "*"
coverage = "*"
flake8 = "*"
hpccm = "*"
interrogate = "*"
isort = "*"
mock = "*"
parameterized = "*"
pytest = "*"
pytest-cov = "*"
wheel = "*"

[tool.poetry.group.docs.dependencies]
sphinx = "*"
sphinx-autoapi = "*"
sphinx_rtd_theme = "*"
nbsphinx = "*"
pandoc = "*"

[tool.isort]
profile = "black"

[tool.coverage.paths]
source = ["dasf", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["dasf"]

[tool.coverage.report]
exclude_also = [
    "except ImportError",
    ".*NV_COMP.*",
    ".*kvikio.*",
    ".*KVIKIO.*",
    ".*jax.*",
    ".*JAX.*",
    ]

[build-system]
requires = ["poetry-core>=1.1.10"]
build-backend = "poetry.core.masonry.api"
