[tool.poetry]
name = "dasf"
version = "1.0.beta.7"
description = "DASF is an Accelerated Framework for Machine Learning"
authors = ["Julio Faracco <jcfaracco@gmail.com>"]
maintainers = ["Julio Faracco <jcfaracco@gmail.com>"]
license = "MIT"
homepage = "https://github.com/lmcad-unicamp/dasf-core"
repository = "https://github.com/lmcad-unicamp/dasf-core"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA",
]
readme="README.md"
exclude = ["tests/*", "docs/*"]

[tool.poetry.dependencies]
bokeh = "3.7.3"
charset-normalizer = "3.4.2"
dask = "<=2025.7.0"
dask_cuda = "*"
dask_jobqueue = "0.8.5"
dask_memusage = "1.1"
dask_ml = ">=2025.1.0"
dask-pytorch-ddp = ">=0.2.0"
GPUtil = "1.4.0"
gdown = "4.7.3"
graphviz = "0.20.3"
h5py = "3.14.0"
hdbscan = "0.8.40"
ipympl = "0.9.7"
ipywidgets = "8.1.7"
joblib = "1.5.1"
jupyterlab = "4.4.3"
lightning = "2.5.3"
matplotlib = "3.10.3"
memray = "1.10.0"
networkx = "^3.2.1"
numpy = "1.26.4"
ormsgpack = "^1.4.1"
packaging = "23.2"
pandas = "2.2.3"
portalocker = "2.10.1"
protobuf = ">=4.25.8"
psutil = "6.1.1"
pyarrow = "19.0.1"
python = ">=3.10"
scikit-learn = "1.6.1"
tornado = "6.5.1"
xarray = "2025.6.1"
xgboost = "2.1.4"
zarr = "2.18.7"


[tool.poetry.group.dev.dependencies]
black = "*"
coverage = "*"
flake8 = "*"
hpccm = "*"
interrogate = "*"
isort = "*"
mock = "*"
parameterized = "*"
pytest = "*"
pytest-cov = "*"
wheel = "*"

[tool.poetry.group.docs.dependencies]
sphinx = "*"
sphinx-autoapi = "*"
sphinx_rtd_theme = "*"
nbsphinx = "*"
pandoc = "*"

[tool.isort]
profile = "black"

[tool.coverage.paths]
source = ["dasf", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["dasf"]

[tool.coverage.report]
exclude_also = [
    "except ImportError",
    ".*NV_COMP.*",
    ".*kvikio.*",
    ".*KVIKIO.*",
    ".*jax.*",
    ".*JAX.*",
    ]

[build-system]
requires = ["poetry-core>=1.1.10"]
build-backend = "poetry.core.masonry.api"
